# Web_scraping

./: .cursorrules  .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js  validate-github-hook.js  vitest.config.js
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_url_patterns.py  003_add_selector_status.py
backend/app/: __init__.py  main.py
backend/app/auth/: dependencies.py  router.py  service.py
backend/app/configs/: __init__.py  cron_utils.py  router.py  schemas.py
backend/app/core/: __init__.py  celery_app.py  config.py  database.py  logging.py
backend/app/dashboard/: __init__.py  router.py  schemas.py
backend/app/data_logic/: __init__.py  deactivation_detector.py  error_logger.py  field_validator.py  serializer.py  upsert_service.py
backend/app/engine/: __init__.py  backoff.py  browser_manager.py  captcha_detector.py  crawl_queue.py  data_extractor.py  progress_publisher.py  scraping_engine.py  stealth_config.py
backend/app/exports/: __init__.py  router.py  service.py  tasks.py
backend/app/middleware/: __init__.py  celery_correlation.py  correlation_id.py  (+1 more)
backend/scripts/: REPORTE_SELECTORES_FINCARAIZ.md  seed_admin.py  seed_fincaraiz.py  seed_metrocuadrado.py  seed_properati.py  test_scraping.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_error_logger.py  test_exports.py  test_health.py  test_websocket.py
(+264 files in other folders)
